--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <div class="down">
             <div class="up">
-                <p>STUDENT REGISTRATION FORM</p>
+                <p>STUDENT REGISTRATION FORMtttt</p>
             </div>
         </div>
 
